# HomeWork9

./: hw8.md  hw9.md  pyproject.toml
data/: todo.store
hw8/: commands.py  ds.py
hw9/: commands.py  data_collection.py  ds.py  mytodo.py
modules/: commands.py  data_collection.py  ds.py  main.py  my-todo.py
