[tool.poetry]
name = "homework8"
version = "0.1.0"
description = ""
authors = ["Vasily Korovin <vskorovin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
my-todo="modules.my-todo:main"