[tool.poetry]
name = "hw9"
version = "0.1.0"
description = ""
authors = ["Vasily Korovin <vskorovin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-todo="hw9.mytodo:run"

